# sopel-weather

./: .coveragerc  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  python-publish.yml  python-tests.yml  release.yml
sopel_modules/weather/: __init__.py  weather.py
sopel_modules/weather/providers/weather/: darksky.py  openmeteo.py  openweathermap.py  pirateweather.py
sopel_weather/: __init__.py
sopel_weather/providers/weather/: openmeteo.py  pirateweather.py  tomorrow.py
tests/: requirements.txt  test_weather.py
