[metadata]
name = sopel-weather
version = 1.6.0
description = A working re-implementation of the weather plugin for Sopel
long_description = file: README.rst, NEWS
long_description_content_type = text/x-rst; charset=UTF-8
author = Rusty Bower
author_email = rusty@rustybower.com
url = https://github.com/sopel-irc/sopel-weather
license = MIT License
classifiers =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
packages = find:
zip_safe = false
include_package_data = true
test_suite = tests
install_requires =
    sopel>=7.1
    requests
    pytz
tests_require =
    codeclimate-test-reporter
    coveralls
    flake8
    mock
    pycodestyle
    pytest>=3.6
    pytest-cov
    requests_mock
    sopel

[options.entry_points]
sopel.plugins =
    weather = sopel_weather
